@@ -16,22 +16,21 @@
 package com.google.auto.value.processor;
 
 import static com.google.auto.common.MoreElements.getLocalAndInheritedMethods;
-import static com.google.common.base.Preconditions.checkState;
+import static java.util.stream.Collectors.toList;
 
 import com.google.auto.common.MoreElements;
 import com.google.auto.common.MoreTypes;
 import com.google.auto.value.AutoValue;
 import com.google.auto.value.processor.AutoValueProcessor.Property;
-import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableBiMap;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.Element;
@@ -66,7 +65,7 @@ class BuilderSpec {
     this.errorReporter = errorReporter;
   }
 
-  private static final Set<ElementKind> CLASS_OR_INTERFACE =
+  private static final ImmutableSet<ElementKind> CLASS_OR_INTERFACE =
       Sets.immutableEnumSet(ElementKind.CLASS, ElementKind.INTERFACE);
 
   /**
@@ -75,12 +74,15 @@ class BuilderSpec {
    * {@code Optional} if so.
    */
   Optional<Builder> getBuilder() {
-    Optional<TypeElement> builderTypeElement = Optional.absent();
+    Optional<TypeElement> builderTypeElement = Optional.empty();
     for (TypeElement containedClass : ElementFilter.typesIn(autoValueClass.getEnclosedElements())) {
       if (MoreElements.isAnnotationPresent(containedClass, AutoValue.Builder.class)) {
         if (!CLASS_OR_INTERFACE.contains(containedClass.getKind())) {
           errorReporter.reportError(
               "@AutoValue.Builder can only apply to a class or an interface", containedClass);
+        } else if (!containedClass.getModifiers().contains(Modifier.STATIC)) {
+          errorReporter.reportError(
+              "@AutoValue.Builder cannot be applied to a non-static class", containedClass);
         } else if (builderTypeElement.isPresent()) {
           errorReporter.reportError(
               autoValueClass + " already has a Builder: " + builderTypeElement.get(),
@@ -94,7 +96,7 @@ class BuilderSpec {
     if (builderTypeElement.isPresent()) {
       return builderFrom(builderTypeElement.get());
     } else {
-      return Optional.absent();
+      return Optional.empty();
     }
   }
 
@@ -103,6 +105,7 @@ class BuilderSpec {
    */
   class Builder {
     private final TypeElement builderTypeElement;
+    private ImmutableSet<ExecutableElement> toBuilderMethods;
 
     Builder(TypeElement builderTypeElement) {
       this.builderTypeElement = builderTypeElement;
@@ -128,23 +131,21 @@ class BuilderSpec {
     ImmutableSet<ExecutableElement> toBuilderMethods(
         Types typeUtils, Set<ExecutableElement> abstractMethods) {
 
-      ImmutableList<String> builderTypeParamNames =
-          FluentIterable.from(builderTypeElement.getTypeParameters())
-              .transform(SimpleNameFunction.INSTANCE)
-              .toList();
+      List<String> builderTypeParamNames =
+          builderTypeElement.getTypeParameters().stream()
+              .map(e -> e.getSimpleName().toString())
+              .collect(toList());
 
       ImmutableSet.Builder<ExecutableElement> methods = ImmutableSet.builder();
       for (ExecutableElement method : abstractMethods) {
         if (builderTypeElement.equals(typeUtils.asElement(method.getReturnType()))) {
           methods.add(method);
           DeclaredType returnType = MoreTypes.asDeclared(method.getReturnType());
-          ImmutableList.Builder<String> typeArguments = ImmutableList.builder();
-          for (TypeMirror typeArgument : returnType.getTypeArguments()) {
-            if (typeArgument.getKind().equals(TypeKind.TYPEVAR)) {
-              typeArguments.add(typeUtils.asElement(typeArgument).getSimpleName().toString());
-            }
-          }
-          if (!builderTypeParamNames.equals(typeArguments.build())) {
+          List<String> typeArguments = returnType.getTypeArguments().stream()
+              .filter(t -> t.getKind().equals(TypeKind.TYPEVAR))
+              .map(t -> typeUtils.asElement(t).getSimpleName().toString())
+              .collect(toList());
+          if (!builderTypeParamNames.equals(typeArguments)) {
             errorReporter.reportError(
                 "Builder converter method should return "
                     + builderTypeElement
@@ -158,6 +159,7 @@ class BuilderSpec {
         errorReporter.reportError(
             "There can be at most one builder converter method", builderMethods.iterator().next());
       }
+      this.toBuilderMethods = builderMethods;
       return builderMethods;
     }
 
@@ -184,6 +186,7 @@ class BuilderSpec {
         TypeSimplifier typeSimplifier,
         ImmutableBiMap<ExecutableElement, String> getterToPropertyName) {
       Iterable<ExecutableElement> builderMethods = abstractMethods(builderTypeElement);
+      boolean autoValueHasToBuilder = !toBuilderMethods.isEmpty();
       Optional<BuilderMethodClassifier> optionalClassifier = BuilderMethodClassifier.classify(
           builderMethods,
           errorReporter,
@@ -191,7 +194,8 @@ class BuilderSpec {
           autoValueClass,
           builderTypeElement,
           getterToPropertyName,
-          typeSimplifier);
+          typeSimplifier,
+          autoValueHasToBuilder);
       if (!optionalClassifier.isPresent()) {
         return;
       }
@@ -214,7 +218,7 @@ class BuilderSpec {
       vars.builderTypeName = TypeSimplifier.classNameOf(builderTypeElement);
       vars.builderFormalTypes = typeSimplifier.formalTypeParametersString(builderTypeElement);
       vars.builderActualTypes = TypeSimplifier.actualTypeParametersString(builderTypeElement);
-      vars.buildMethodName = buildMethod.getSimpleName().toString();
+      vars.buildMethod = Optional.of(new AutoValueProcessor.SimpleMethod(buildMethod));
       vars.builderGetters = classifier.builderGetters();
 
       ImmutableMultimap.Builder<String, PropertySetter> setterBuilder = ImmutableMultimap.builder();
@@ -228,7 +232,7 @@ class BuilderSpec {
       vars.builderSetters = setterBuilder.build();
 
       vars.builderPropertyBuilders =
-          makeBuilderPropertyBuilderMap(classifier, typeSimplifier, getterToPropertyName);
+          ImmutableMap.copyOf(classifier.propertyNameToPropertyBuilder());
 
       Set<Property> required = Sets.newLinkedHashSet(vars.props);
       for (Property property : vars.props) {
@@ -239,23 +243,6 @@ class BuilderSpec {
         }
       }
       vars.builderRequiredProperties = ImmutableSet.copyOf(required);
-    }
-
-    private ImmutableMap<String, PropertyBuilder> makeBuilderPropertyBuilderMap(
-        BuilderMethodClassifier classifier,
-        TypeSimplifier typeSimplifier,
-        ImmutableBiMap<ExecutableElement, String> getterToPropertyName) {
-      ImmutableMap.Builder<String, PropertyBuilder> map = ImmutableMap.builder();
-      for (Map.Entry<String, ExecutableElement> entry :
-          classifier.propertyNameToPropertyBuilder().entrySet()) {
-        String property = entry.getKey();
-        ExecutableElement autoValuePropertyMethod = getterToPropertyName.inverse().get(property);
-        ExecutableElement propertyBuilderMethod = entry.getValue();
-        PropertyBuilder propertyBuilder = new PropertyBuilder(
-            autoValuePropertyMethod, propertyBuilderMethod, typeSimplifier);
-        map.put(property, propertyBuilder);
-      }
-      return map.build();
     }
   }
 
@@ -271,23 +258,30 @@ class BuilderSpec {
    * five) then {@code Optional<T>} can be the corresponding boxed type.
    */
   public static class PropertyGetter {
+    private final String access;
     private final String type;
     private final Optionalish optional;
 
     /**
      * Makes a new {@code PropertyGetter} instance.
      *
+     * @param method the source method which this getter is implementing.
      * @param type the type that the getter returns. This is written to take imports into account,
-     *     so it might be {@code List<String>} for example. It is either identical to the type
-     *     of the corresponding getter in the {@code @AutoValue} class, or it is an optional
-     *     wrapper, like {@code Optional<List<String>>}.
+     *     so it might be {@code List<String>} for example. It is either identical to the type of
+     *     the corresponding getter in the {@code @AutoValue} class, or it is an optional wrapper,
+     *     like {@code Optional<List<String>>}.
      * @param optional a representation of the {@code Optional} type that the getter returns, if
      *     this is an optional getter, or null otherwise. An optional getter is one that returns
      *     {@code Optional<T>} rather than {@code T}, as explained above.
      */
-    PropertyGetter(String type, Optionalish optional) {
+    PropertyGetter(ExecutableElement method, String type, Optionalish optional) {
+      this.access = AutoValueProcessor.access(method);
       this.type = type;
       this.optional = optional;
+    }
+
+    public String getAccess() {
+      return access;
     }
 
     public String getType() {
@@ -309,15 +303,19 @@ class BuilderSpec {
    * it can have a setter with a type that can be copied to {@code T} through {@code Optional.of}.
    */
   public class PropertySetter {
+    private final String access;
     private final String name;
     private final String parameterTypeString;
+    private final boolean primitiveParameter;
     private final String copyOf;
 
     public PropertySetter(
         ExecutableElement setter, TypeMirror propertyType, TypeSimplifier typeSimplifier) {
+      this.access = AutoValueProcessor.access(setter);
       this.name = setter.getSimpleName().toString();
       TypeMirror parameterType = Iterables.getOnlyElement(setter.getParameters()).asType();
-      String simplifiedParameterType = typeSimplifier.simplify(parameterType);
+      primitiveParameter = parameterType.getKind().isPrimitive();
+      String simplifiedParameterType = typeSimplifier.simplifyWithAnnotations(parameterType);
       if (setter.isVarArgs()) {
         simplifiedParameterType = simplifiedParameterType.replaceAll("\\[\\]$", "...");
       }
@@ -334,6 +332,10 @@ class BuilderSpec {
       }
     }
 
+    public String getAccess() {
+      return access;
+    }
+
     public String getName() {
       return name;
     }
@@ -342,109 +344,30 @@ class BuilderSpec {
       return parameterTypeString;
     }
 
+    public boolean getPrimitiveParameter() {
+      return primitiveParameter;
+    }
+
     public String copy(AutoValueProcessor.Property property) {
       if (copyOf == null) {
         return property.toString();
       }
-      
+
       String copy = String.format(copyOf, property);
-      
+
       // Add a null guard only in cases where we are using copyOf and the property is @Nullable.
       if (property.isNullable()) {
         copy = String.format("(%s == null ? null : %s)", property, copy);
       }
-      
+
       return copy;
-    }
-  }
-
-  /**
-   * Information about a property builder, referenced from the autovalue.vm template. A property
-   * called foo (defined by a method foo() or getFoo()) can have a property builder called
-   * fooBuilder(). The type of foo must be an immutable Guava type, like ImmutableSet, and
-   * fooBuilder() must return the corresponding builder, like ImmutableSet.Builder.
-   */
-  public class PropertyBuilder {
-    private final String name;
-    private final String builderType;
-    private final String initializer;
-    private final String copyAll;
-    private final String empty;
-
-    PropertyBuilder(
-        ExecutableElement autoValuePropertyMethod,
-        ExecutableElement propertyBuilderMethod,
-        TypeSimplifier typeSimplifier) {
-      this.name = propertyBuilderMethod.getSimpleName() + "$";
-      String immutableType = typeSimplifier.simplify(autoValuePropertyMethod.getReturnType());
-      int typeParamIndex = immutableType.indexOf('<');
-      checkState(typeParamIndex > 0, immutableType);
-      String rawImmutableType = immutableType.substring(0, typeParamIndex);
-      this.builderType =
-          rawImmutableType + ".Builder" + immutableType.substring(typeParamIndex);
-      this.initializer = rawImmutableType + ".builder()";
-      this.empty = rawImmutableType + ".of()";
-      // TODO(emcmanus): clean up TypeSimplifier and remove this hack.
-      // We want it to simplify com.google.common.collect.ImmutableSet.Builder<E>
-      // the same way it would simplify com.google.common.collect.ImmutableSet<E>.
-      // The issue is that getEnclosingElement tends to do the wrong thing in Eclipse
-      // so we end up with ImmutableSet<E>.Builder<E>.
-      TypeElement builderTypeElement = MoreElements.asType(
-          processingEnv.getTypeUtils().asElement(propertyBuilderMethod.getReturnType()));
-      Set<String> methodNames = Sets.newHashSet();
-      for (ExecutableElement builderMethod :
-          ElementFilter.methodsIn(builderTypeElement.getEnclosedElements())) {
-        methodNames.add(builderMethod.getSimpleName().toString());
-      }
-      if (methodNames.contains("addAll")) {
-        this.copyAll = "addAll";
-      } else if (methodNames.contains("putAll")) {
-        this.copyAll = "putAll";
-      } else {
-        throw new AssertionError("Builder contains neither addAll nor putAll: " + methodNames);
-      }
-    }
-
-    /** The name of the field to hold this builder. */
-    public String getName() {
-      return name;
-    }
-
-    /** The type of the builder, for example {@code ImmutableSet.Builder<String>}. */
-    public String getBuilderType() {
-      return builderType;
-    }
-
-    /** An initializer for the builder field, for example {@code ImmutableSet.builder()}. */
-    public String getInitializer() {
-      return initializer;
-    }
-
-    /**
-     * A method to return an empty collection of the type that this builder builds. For example,
-     * if this is an {@code ImmutableList<String>} then the method {@code ImmutableList.of()} will
-     * correctly return an empty {@code ImmutableList<String>}, assuming the appropriate context for
-     * type inference.
-     */
-    public String getEmpty() {
-      return empty;
-    }
-
-    /**
-     * The method to copy another collection into this builder. It is {@code addAll} for
-     * one-dimensional collections like {@code ImmutableList} and {@code ImmutableSet}, and it is
-     * {@code putAll} for two-dimensional collections like {@code ImmutableMap} and
-     * {@code ImmutableTable}.
-     */
-    public String getCopyAll() {
-      return copyAll;
     }
   }
 
   /**
    * Returns a representation of the given {@code @AutoValue.Builder} class or interface. If the
    * class or interface has abstract methods that could not be part of any builder, emits error
-   * messages and returns null.
+   * messages and returns Optional.empty().
    */
   private Optional<Builder> builderFrom(TypeElement builderTypeElement) {
 
@@ -454,39 +377,39 @@ class BuilderSpec {
     // the return type of Foo<U> build() was really the same as the declaration of Foo<T>. This
     // check produces a better error message in that case and similar ones.
 
-    boolean ok = true;
-    int nTypeParameters = autoValueClass.getTypeParameters().size();
-    if (nTypeParameters != builderTypeElement.getTypeParameters().size()) {
-      ok = false;
-    } else {
-      for (int i = 0; i < nTypeParameters; i++) {
-        TypeParameterElement autoValueParam = autoValueClass.getTypeParameters().get(i);
-        TypeParameterElement builderParam = builderTypeElement.getTypeParameters().get(i);
-        if (!autoValueParam.getSimpleName().equals(builderParam.getSimpleName())) {
-          ok = false;
-          break;
-        }
-        Set<TypeMirror> autoValueBounds = new TypeMirrorSet(autoValueParam.getBounds());
-        Set<TypeMirror> builderBounds = new TypeMirrorSet(builderParam.getBounds());
-        if (!autoValueBounds.equals(builderBounds)) {
-          ok = false;
-          break;
-        }
-      }
-    }
-    if (!ok) {
+    if (!sameTypeParameters(autoValueClass, builderTypeElement)) {
       errorReporter.reportError(
           "Type parameters of " + builderTypeElement + " must have same names and bounds as "
               + "type parameters of " + autoValueClass, builderTypeElement);
-      return Optional.absent();
+      return Optional.empty();
     }
     return Optional.of(new Builder(builderTypeElement));
+  }
+
+  private static boolean sameTypeParameters(TypeElement a, TypeElement b) {
+    int nTypeParameters = a.getTypeParameters().size();
+    if (nTypeParameters != b.getTypeParameters().size()) {
+      return false;
+    }
+    for (int i = 0; i < nTypeParameters; i++) {
+      TypeParameterElement aParam = a.getTypeParameters().get(i);
+      TypeParameterElement bParam = b.getTypeParameters().get(i);
+      if (!aParam.getSimpleName().equals(bParam.getSimpleName())) {
+        return false;
+      }
+      Set<TypeMirror> autoValueBounds = new TypeMirrorSet(aParam.getBounds());
+      Set<TypeMirror> builderBounds = new TypeMirrorSet(bParam.getBounds());
+      if (!autoValueBounds.equals(builderBounds)) {
+        return false;
+      }
+    }
+    return true;
   }
 
   // Return a set of all abstract methods in the given TypeElement or inherited from ancestors.
   private Set<ExecutableElement> abstractMethods(TypeElement typeElement) {
     Set<ExecutableElement> methods = getLocalAndInheritedMethods(
-        typeElement, processingEnv.getElementUtils());
+        typeElement, processingEnv.getTypeUtils(), processingEnv.getElementUtils());
     ImmutableSet.Builder<ExecutableElement> abstractMethods = ImmutableSet.builder();
     for (ExecutableElement method : methods) {
       if (method.getModifiers().contains(Modifier.ABSTRACT)) {
